# Financial-planner

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml  nginx.conf
.claude/: launch.json
backend/: config.py  dependencies.py  main.py  pyproject.toml  seed_scenarios.py
backend/agent/: executor.py  loop.py  sandbox.py  tools.py
backend/api/: agent.py  assets.py  auth.py  holdings.py  onboarding.py  profile.py  router.py  scenarios.py  simulation.py
backend/auth/: middleware.py
backend/data/: assets.example.yaml  profile.example.yaml
backend/data/scenarios/: base-copy.yaml  base.yaml  bear.yaml  bull.yaml  second-home-2035.yaml
backend/engine/: cashflow.py  college.py  healthcare.py  inflation.py  investment.py  market_data.py  monte_carlo.py  mortgage.py  rebalance.py  rmd.py  social_security.py  tax.py
backend/models/: assets.py  enums.py  holdings.py  profile.py  scenario.py  simulation.py
backend/storage/: base.py  local.py
backend/tests/: test_engine.py
deploy/: README.md  config.example.env  deploy.sh  remote-deploy.sh  teardown.sh
docs/: agent-architecture.md  deployment-spec.md  engine-architecture.md  engine-rework-spec.md  feature-backlog.md  money-logic.md  scenario-table-export-spec.md  ui-restructure-spec.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: agent.ts  assets.ts  client.ts  holdings.ts  onboarding.ts  profile.ts  scenarios.ts  simulation.ts
frontend/src/auth/: AuthContext.tsx  (+1 more)
(+35 files in other folders)
